tests/snapshots/run_wpt_conformance__coreml_clamp_float16_5D_tensor_default_options_minValue_and_specified_negative_options_maxValue.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "clamp.https.any.js",
    "clamp float16 5D tensor default options.minValue and specified negative options.maxValue",
    "coreml",
    "PASS",
)
