tests/snapshots/run_wpt_conformance__coreml_clamp_float32_3D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "clamp.https.any.js",
    "clamp float32 3D tensor default options",
    "coreml",
    "PASS",
)
